syntax = "proto3";

package TransactionManager_TransactionManagerProto;

import "Transaction.proto";
import "LeaseType.proto";
// TODO: maybe these things should have slot data? to check if they are the same?

service Gossip {
	rpc Gossip (GossipRequest) returns (GossipResponse) {}
	rpc Update (UpdateRequest) returns (UpdateResponse) {}
	rpc SameSlotLeaseExecution (SameSlotLeaseExecutionRequest) returns (SameSlotLeaseExecutionResponse) {}
	rpc Prepare (PrepareRequest) returns (PrepareResponse) {}
	rpc Commit (CommitRequest) returns (CommitResponse) {}
}

message GossipRequest {
	repeated DADInt writes = 1;
}

message GossipResponse {
	bool ok = 1;
}

message UpdateRequest {}

message UpdateResponse {
	repeated DADInt writes = 1;
}

message SameSlotLeaseExecutionRequest {
	Lease lease = 1;
}

message SameSlotLeaseExecutionResponse {
	Lease lease = 1;
}

message PrepareRequest {
}

message PrepareResponse {
}

message CommitRequest {
	repeated DADInt writes = 1;
}

message CommitResponse {
	bool ok = 1;
}
